# OpticPincer

./: .gitignore  README.md  gh_description.txt  pyproject.toml
docs/: index.md
docs/explanation/: how-clicking-works.md  ui-tree-design.md  why-opticpincer.md
docs/how-to/: automate-egui-app.md  click-by-widget-id.md  debug-click-not-registering.md  integrate-with-cargo-watch.md
docs/reference/: cli-commands.md  click-strategies.md  coordinate-system.md  ui-tree-json.md
docs/tutorials/: first-gui-test.md
src/opticpincer/: __init__.py  __main__.py  cli.py  click.py  core.py  process.py  screenshot.py  uitree.py  window.py
tests/: test_core.py  test_ctrl_click.py
